--- a/.travis.yml
+++ b/.travis.yml
@@ -9,14 +9,14 @@ addons:
 cache:
   # Caches $HOME/.npm when npm ci is default script command
   # Caches node_modules in all other cases
-  npm: true
+  yarn: true
   directories:
     # we also need to cache folder with Cypress binary
     - ~/.cache
 install:
-  - npm ci
+  - yarn ci
 script:
-  - $(npm bin)/cypress run --record
+  - $(yarn bin)/cypress run --record
 
 
 after_script:
