--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cypress": "^3.4.1",
     "next": "9.0.5",
     "react": "16.9.0",
-    "react-dom": "16.9.0"
+    "react-dom": "16.9.0",
+    "start-server-and-test": "^1.10.0"
   }
 }
