ch(test): Cleanup default Cypress Examples

--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build && next export",
-    "e2e": "cypress open",
-    "start": "serve ./out",
-    "test": "start-server-and-test dev http://localhost:3000 e2e"
+    "test": "cypress run",
+    "start": "serve ./out"
  
   },
   "dependencies": {
