--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "dev": "next dev",
     "build": "next build && next export",
     "test": "cypress run",
-    "start": "serve ./out"
- 
+    "start": "serve ./out",
+    "coverage": "nyc yarn run test"
   },
   "dependencies": {
+    "@cypress/code-coverage": "^1.10.1",
     "coveralls": "^3.0.6",
     "cypress": "^3.4.1",
+    "istanbul-lib-coverage": "^2.0.5",
     "next": "9.0.5",
+    "nyc": "^14.1.1",
     "react": "16.9.0",
     "react-dom": "16.9.0",
     "start-server-and-test": "^1.10.0"
