--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@cypress/code-coverage": "^1.10.1",
+    "@zeit/next-css": "^1.0.1",
+    "bootstrap": "^4.3.1",
     "coveralls": "^3.0.6",
     "cypress": "^3.4.1",
     "istanbul-lib-coverage": "^2.0.5",
@@ -18,6 +20,10 @@
     "nyc": "^14.1.1",
     "react": "16.9.0",
     "react-dom": "16.9.0",
+    "reactstrap": "^8.0.1",
     "start-server-and-test": "^1.10.0"
+  },
+  "devDependencies": {
+    "next-compose": "^0.0.2"
   }
 }
