--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "16.9.0",
     "react-dom": "16.9.0",
     "reactstrap": "^8.0.1",
+    "serve": "^11.1.0",
     "start-server-and-test": "^1.10.0"
   },
   "devDependencies": {
