--- a/package.json
+++ b/package.json
@@ -12,15 +12,17 @@
   "dependencies": {
     "@cypress/code-coverage": "^1.10.1",
     "@zeit/next-css": "^1.0.1",
+    "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "coveralls": "^3.0.6",
     "cypress": "^3.4.1",
     "istanbul-lib-coverage": "^2.0.5",
+    "jquery": "^3.4.1",
     "next": "9.0.5",
     "nyc": "^14.1.1",
+    "popper.js": "^1.15.0",
     "react": "16.9.0",
     "react-dom": "16.9.0",
-    "reactstrap": "^8.0.1",
     "serve": "^11.1.0",
     "start-server-and-test": "^1.10.0"
   },
